force-app/main/default/objects/Apttus_Proposal__Proposal__c/Apttus_Proposal__Proposal__c.object-meta.xml
<CustomObject>
    <description>Quote/Proposal object which holds dates and line items, many quotes/proposals may be related to a single opportunity, a quote/proposal may have many detail lines</description>
    <label>Quote/Proposal</label>
    <nameField>
        <displayFormat>Q-{00000000}</displayFormat>
        <label>Proposal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>