force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/ACIC_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>ACIC_Request_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked whenever ACIC Request Case Status is set to Approved</description>
    <label>ACIC Request Approved</label>
    <type>Checkbox</type>
</CustomField>