force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Add_Products_Test__c.field-meta.xml
<CustomField>
    <fullName>Add_Products_Test__c</fullName>
    <formula>IF ( AND(LEN( Apttus_QPConfig__PriceListId__c ) &gt; 0,TEXT( Apttus_Proposal__Approval_Stage__c )&lt;&gt; &quot;Accepted&quot;,Apttus_Proposal__Primary__c,TEXT(Is_Startrack_Proposal__c) &lt;&gt; &apos;&apos;), 

IF(RecordType.DeveloperName == &apos;Proposal&apos;  &amp;&amp; $Profile.Name  != &apos;Pricing Management&apos;, HYPERLINK(&quot;/apex/Apttus_Config2__Cart?businessObjectId=&quot; 
&amp;Id+&quot;&amp;flow=NewQuote&quot;&amp;&quot;&amp;useAdvancedApproval=true&amp;useDealOptimizer=true&amp;cntrNbr_1=&quot;&amp; APT_Contract_Id__c , 
IMAGE(&quot;/resource/APT_Add&quot;, &quot;Add&quot;),&quot;_parent&quot;), 

IF(RecordType.DeveloperName == &apos;Proposal&apos;  &amp;&amp;  $Profile.Name  == &apos;Pricing Management&apos;, HYPERLINK(&quot;https://auspost--ptest--apttus-config2.visualforce.com/apex/Apttus_Config2__Cart?businessObjectId=&quot; 
&amp;Id+&quot;&amp;flow=Approval flow&quot;&amp;&quot;&amp;useAdvancedApproval=true&amp;useDealOptimizer=true&amp;cntrNbr_1=&quot;&amp; APT_Contract_Id__c , 
IMAGE(&quot;/resource/APT_Add&quot;, &quot;Add&quot;),&quot;_self&quot;),

IF((RecordType.DeveloperName == &apos;APT_Renewal_Quote&apos; || RecordType.DeveloperName == &apos;APT_Amendment_Quote&apos;) &amp;&amp;  $Profile.Name  == &apos;Pricing Management&apos;, HYPERLINK(&quot;https://auspost--ptest--apttus-config2.visualforce.com/apex/Apttus_Config2__Cart?businessObjectId=&quot; 
&amp;Id+&quot;&amp;flow=Approval flow&quot;&amp;&quot;&amp;useAdvancedApproval=true&amp;useDealOptimizer=true&amp;cntrNbr_1=&quot;&amp; APT_Contract_Id__c , 
IMAGE(&quot;/resource/APT_Add&quot;, &quot;Add&quot;),&quot;_self&quot;),

IF( (RecordType.DeveloperName == &apos;APT_Renewal_Quote&apos; || RecordType.DeveloperName == &apos;APT_Amendment_Quote&apos;) ,HYPERLINK(&quot;https://auspost--ptest--apttus-config2.visualforce.com/apex/Apttus_Config2__Cart?businessObjectId=&quot; 
&amp;Id+&quot;&amp;flow=RenewalQuote&quot;&amp;&quot;&amp;useAdvancedApproval=true&amp;useDealOptimizer=true&amp;cntrNbr_1=&quot;&amp; APT_Contract_Id__c , 
IMAGE(&quot;/resource/APT_Add&quot;, &quot;Add&quot;),&quot;_self&quot;), 
HYPERLINK(&quot;https://auspost--ptest--apttus-config2.visualforce.com/apex/Apttus_Config2__Cart?businessObjectId=&quot; 
&amp;Id&amp;&quot;&amp;useAdvancedApproval=true&amp;useDealOptimizer=true&quot;, 
IMAGE(&quot;/resource/APT_Add&quot;, &quot;Add&quot;),&quot;_self&quot;))))), NULL)</formula>
    <label>Add Products Test Hello</label>
    <type>Text</type>
</CustomField>