force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_ABN__c.field-meta.xml
<CustomField>
    <fullName>APT_ABN__c</fullName>
    <formula>Apttus_Proposal__Account__r.ABN__c</formula>
    <label>ABN</label>
    <type>Text</type>
</CustomField>