force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_ACIC_Request_required_for_Contract__c.field-meta.xml
<CustomField>
    <fullName>APT_ACIC_Request_required_for_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACIC Request required for Contract</label>
    <type>Checkbox</type>
</CustomField>