force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Added_Generic_LP__c.field-meta.xml
<CustomField>
    <fullName>APT_Added_Generic_LP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added Generic LP</label>
    <type>Checkbox</type>
</CustomField>