force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_competitor__c.field-meta.xml
<CustomField>
    <fullName>APT_competitor__c</fullName>
    <description>Enter competitor(s) details</description>
    <label>Who are the competitor(s) – if any</label>
    <length>255</length>
    <type>Text</type>
</CustomField>