force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Number__c</fullName>
    <description>Contract Number for Contract Pricing</description>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>