force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Contracting_Entity__c.field-meta.xml
<CustomField>
    <fullName>APT_Contracting_Entity__c</fullName>
    <description>Default is Australian Postal Corporation however product chosen will determine the value</description>
    <inlineHelpText>Default is Australian Postal Corporation however product chosen will determine the value</inlineHelpText>
    <label>Contracting Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australian Postal Corporation</fullName>
                <default>true</default>
                <label>Australian Postal Corporation</label>
            </value>
            <value>
                <fullName>Australia Post Services Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Decipha Pty Ltd</fullName>
            </value>
            <value>
                <fullName>POLi Payments Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Post Logistics (Hong Kong) Pty Ltd</fullName>
            </value>
            <value>
                <fullName>SecurePay Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Star Track Express Pty Ltd</fullName>
                <label>StarTrack Express Pty Ltd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>