force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Conversation__c.field-meta.xml
<CustomField>
    <fullName>APT_Conversation__c</fullName>
    <description>Capture conversation with customer</description>
    <inlineHelpText>What conversations have you had with customer? 
Why are standard rates not acceptable?</inlineHelpText>
    <label>Customer interactions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>