force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Create_Proposal_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>APT_Create_Proposal_Batch_Id__c</fullName>
    <label>Create Proposal Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>