force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Credit_Assessment__c.field-meta.xml
<CustomField>
    <fullName>APT_Credit_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>.</description>
    <label>Account Assessment Outcome</label>
    <referenceTo>APT_Credit_Assessment__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>