force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Credit_Assessment_Complete__c.field-meta.xml
<CustomField>
    <fullName>APT_Credit_Assessment_Complete__c</fullName>
    <label>Credit Assessment Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>