force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Credit_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>APT_Credit_Assessment_Status__c</fullName>
    <label>Assessment Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>