force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Credit_Assessment_Status_Details__c.field-meta.xml
<CustomField>
    <fullName>APT_Credit_Assessment_Status_Details__c</fullName>
    <label>Credit Assessment Status Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>