force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Credit_Referred_Manually__c.field-meta.xml
<CustomField>
    <fullName>APT_Credit_Referred_Manually__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Credit Referred Manually?</label>
    <type>Checkbox</type>
</CustomField>