force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Cubic_Factor__c.field-meta.xml
<CustomField>
    <fullName>APT_Cubic_Factor__c</fullName>
    <formula>IF(ISPICKVAL(APT_Cubic_Factor_Type__c, &apos;Cubic Calculation2&apos;),  APT_Cubic_Calculation2__c, APT_Cubic_Calculation1__c)</formula>
    <label>Cubic Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>