force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Cubic_Factor_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>APT_Cubic_Factor_Record_Count__c</fullName>
    <label>Cubic Factor Record Count</label>
    <summaryForeignKey>APT_Cubic_Factor__c.APT_Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>