force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Date_of_Generation_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>APT_Date_of_Generation_Rate_Card__c</fullName>
    <formula>TEXT((DAY(TODAY()))) +&quot;-&quot;+ CASE(TEXT((MONTH(TODAY()))), &quot;1&quot;, &quot;January&quot;, &quot;&quot;, &quot;2&quot;, &quot;February&quot;, &quot;&quot;, &quot;3&quot;, &quot;March&quot;, &quot;&quot;, &quot;4&quot;, &quot;April&quot;, &quot;&quot;, &quot;5&quot;, &quot;May&quot;, &quot;&quot;, &quot;6&quot;, &quot;June&quot;, &quot;&quot;, &quot;7&quot;, &quot;July&quot;, &quot;&quot;, &quot;8&quot;, &quot;August&quot;, &quot;&quot;, &quot;9&quot;, &quot;September&quot;, &quot;&quot;, &quot;10&quot;, &quot;October&quot;, &quot;&quot;, &quot;11&quot;, &quot;November&quot;, &quot;&quot;, &quot;12&quot;, &quot;December&quot;) +&quot;-&quot;+TEXT((YEAR(TODAY())))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Generation Rate Card</label>
    <type>Text</type>
</CustomField>