force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Document_Generation_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>APT_Document_Generation_in_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Generation in Progress</label>
    <type>Checkbox</type>
</CustomField>