force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Document_Notification_Off__c.field-meta.xml
<CustomField>
    <fullName>APT_Document_Notification_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag exclude the proposal document generation related notification email process</description>
    <inlineHelpText>The flag exclude the proposal document generation related notification email process</inlineHelpText>
    <label>Document Notification Disabled</label>
    <type>Checkbox</type>
</CustomField>