force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Domestic_Overweight_Flag__c.field-meta.xml
<CustomField>
    <fullName>APT_Domestic_Overweight_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please click on Submit for Approval button at top of the page to submit Oversize Approval</inlineHelpText>
    <label>Domestic Oversize Flag</label>
    <type>Checkbox</type>
</CustomField>