force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Estimated_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>APT_Estimated_Credit_Amount__c</fullName>
    <label>Estimated Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>