force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Include_International_Std_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>APT_Include_International_Std_Rate_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include International Std Rate Card</label>
    <type>Checkbox</type>
</CustomField>