force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_International_Overweight_Flag__c.field-meta.xml
<CustomField>
    <fullName>APT_International_Overweight_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Overweight Flag</label>
    <type>Checkbox</type>
</CustomField>