force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Legal_Entity_Name__c</fullName>
    <formula>Apttus_Proposal__Account__r.Name</formula>
    <label>Legal Entity Name</label>
    <type>Text</type>
</CustomField>