force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>APT_Method_of_Payment__c</fullName>
    <description>.</description>
    <label>New Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charge Account</fullName>
            </value>
            <value>
                <fullName>Charge Account + Sub Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>