force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Minimum_Monthly_Spend__c.field-meta.xml
<CustomField>
    <fullName>APT_Minimum_Monthly_Spend__c</fullName>
    <description>Used to capture the minimum monthly spend at the proposal level for startrack products.</description>
    <inlineHelpText>Minimum monthly spend across ALL StarTrack Products</inlineHelpText>
    <label>Minimum Monthly Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>