force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Non_Contracted_Mail_Products__c.field-meta.xml
<CustomField>
    <fullName>APT_Non_Contracted_Mail_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Contracted Mail Products</label>
    <type>Checkbox</type>
</CustomField>