force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Opportunity_Key_contact__c.field-meta.xml
<CustomField>
    <fullName>APT_Opportunity_Key_contact__c</fullName>
    <formula>Apttus_Proposal__Opportunity__r.KeyContact__c</formula>
    <label>Opportunity Key Contact</label>
    <type>Text</type>
</CustomField>