force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Overweight_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>APT_Overweight_Approval_Status__c</fullName>
    <label>Oversize Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>