force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Overweight_Approved_By_User__c.field-meta.xml
<CustomField>
    <fullName>APT_Overweight_Approved_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overweight Approved By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>