force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Postbillpay_Included__c.field-meta.xml
<CustomField>
    <fullName>APT_Postbillpay_Included__c</fullName>
    <description>Used in System Configuration to display &apos;Create Postbillpay Contract&apos; button. Please make sure filter criteria match the exact name of the product behind the scenes (Case Sensitive)</description>
    <inlineHelpText>Used in System Configuration to display &apos;Create Postbillpay Contract&apos; button. Please make sure filter criteria match the exact name of the product behind the scenes (Case Sensitive)</inlineHelpText>
    <label>Postbillpay Included?</label>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.Product_Name_Text__c</field>
        <operation>contains</operation>
        <value>Post Billpay</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>