force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_pricing_fields_changed__c.field-meta.xml
<CustomField>
    <fullName>APT_pricing_fields_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is set to true if Pricing fields on proposal are changed.</description>
    <label>Pricing fields on Proposal Changed?</label>
    <type>Checkbox</type>
</CustomField>