force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Product_names__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_names__c</fullName>
    <label>Product Names</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>