force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Proposal_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>APT_Proposal_Generated_Date__c</fullName>
    <label>Proposal Generated Date</label>
    <type>DateTime</type>
</CustomField>