force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Revenue_Type__c</fullName>
    <description>Determine if amendment will be increase or decrease in revenue</description>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase Revenue</fullName>
            </value>
            <value>
                <fullName>Decrease Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>