force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>APT_Sales_Team__c</fullName>
    <description>Captures Sales Team value from associated Organization: used in ST Delegation reporting</description>
    <formula>TEXT(Apttus_Proposal__Account__r.Sales_Segment__c)</formula>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>