force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Selected_LP__c.field-meta.xml
<CustomField>
    <fullName>APT_Selected_LP__c</fullName>
    <label>Selected LP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>