force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Show_link_to_Domestic_Rates__c.field-meta.xml
<CustomField>
    <fullName>APT_Show_link_to_Domestic_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Link to Domestic Rates?</label>
    <type>Checkbox</type>
</CustomField>