force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Tier_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Tier_Adjustment_Type__c</fullName>
    <description>Tier Adjustment for Approval</description>
    <label>(depr) Requested Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Tier Up</fullName>
            </value>
            <value>
                <fullName>2 Tier Up</fullName>
            </value>
            <value>
                <fullName>3 Tier Up</fullName>
                <isActive>false</isActive>
                <label>3 Tier Up</label>
            </value>
            <value>
                <fullName>4 Tier Up</fullName>
                <isActive>false</isActive>
                <label>4 Tier Up</label>
            </value>
            <value>
                <fullName>5 Tier Up</fullName>
                <isActive>false</isActive>
                <label>5 Tier Up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>