force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Total_Weight_Parcel2__c.field-meta.xml
<CustomField>
    <fullName>APT_Total_Weight_Parcel2__c</fullName>
    <label>Total Weight Parcel2</label>
    <summarizedField>APT_Cubic_Factor__c.APT_Weight_Parcel__c</summarizedField>
    <summaryForeignKey>APT_Cubic_Factor__c.APT_Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>