force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Use_Offline_Rates__c.field-meta.xml
<CustomField>
    <fullName>APT_Use_Offline_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Offline Rates?</description>
    <label>Use Offline Rates</label>
    <type>Checkbox</type>
</CustomField>