force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/APT_Zone__c.field-meta.xml
<CustomField>
    <fullName>APT_Zone__c</fullName>
    <label>Zone</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>