force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Approval_Stage__c</fullName>
    <description>The proposal approval stage</description>
    <inlineHelpText>This indicates the status of your proposal record</inlineHelpText>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Accepted without proposal document</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>