force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>R00N70000001yUfDEAU</relationshipName>
    <type>Lookup</type>
</CustomField>