force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Primary__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the quote/proposal is the primary quote to update the related opportunity</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>