force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__Proposal_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Proposal_Expiration_Date__c</fullName>
    <description>The quote/proposal expiration date</description>
    <inlineHelpText>This date will be system generated, 60 days from the proposal created date. Expired proposals cannot be presented to the customer</inlineHelpText>
    <label>Proposal Expiration Date</label>
    <type>Date</type>
</CustomField>