force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__ReadyToPresent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__ReadyToPresent__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the proposal is ready for presentation</description>
    <label>Ready To Present</label>
    <type>Checkbox</type>
</CustomField>