force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_Proposal__RFP_Response_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__RFP_Response_Due_Date__c</fullName>
    <label>RFP Response Due Date</label>
    <type>Date</type>
</CustomField>