force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__ConfigurationFinalizedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__ConfigurationFinalizedDate__c</fullName>
    <description>Date when the configuration was finalized for the quote/proposal</description>
    <label>Configuration Finalized Date</label>
    <type>DateTime</type>
</CustomField>