force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__LegalEntityId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__LegalEntityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the legal entity associated with the quote/proposal. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</description>
    <inlineHelpText>ID of the legal entity associated with the quote/proposal. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</inlineHelpText>
    <label>Legal Entity</label>
    <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
    <relationshipLabel>Quote/Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>