force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Apttus_QPConfig__PartnerAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__PartnerAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the partner account who created the quote on behalf of a customer</description>
    <inlineHelpText>ID of the partner account who created the quote on behalf of a customer</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes/Proposals (Partner)</relationshipLabel>
    <relationshipName>QuotesProposalsPartner</relationshipName>
    <type>Lookup</type>
</CustomField>